test/myOutput.txt
module.js:491
    throw err;
    ^

Error: Cannot find module 'C:\test\myModule.js'
    at Function.Module._resolveFilename (module.js:489:15)
    at Function.Module._load (module.js:439:25)
    at Function.Module.runMain (module.js:609:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:578:3
module.js:491
    throw err;
    ^

Error: Cannot find module 'C:\test\myModule.js'
    at Function.Module._resolveFilename (module.js:489:15)
    at Function.Module._load (module.js:439:25)
    at Function.Module.runMain (module.js:609:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:578:3
module.js:491
    throw err;
    ^

Error: Cannot find module 'C:\test\myModule.js'
    at Function.Module._resolveFilename (module.js:489:15)
    at Function.Module._load (module.js:439:25)
    at Function.Module.runMain (module.js:609:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:578:3
module.js:491
    throw err;
    ^

Error: Cannot find module 'C:\test\myModule.js'
    at Function.Module._resolveFilename (module.js:489:15)
    at Function.Module._load (module.js:439:25)
    at Function.Module.runMain (module.js:609:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:578:3
TESTING
TESTING
TESTING
TESTING
TESTING
TESTING
TESTING
TESTING
TESTING
